--- a/main.bib
+++ b/main.bib
@@ -76,3 +76,14 @@
     year = {1974},
     doi = {10.1021/ja00816a025}
 }
+
+@article{bib:CrevierMayer,
+    author = {Thomas J Crevier and James M Mayer},
+    title = {Direct Attack of Phenyl Anion at an Electrophilic Osmium-Nitrido Ligand},
+    journal = {Journal of the American Chemical Society},
+    volume = {120},
+    number = {22},
+    pages = {5595-5596},
+    year = {1998},
+    doi = {10.1021/ja980548u}
+}
