TA Office Hours 3

--- a/Notes/Unit2/Unit2.tex
+++ b/Notes/Unit2/Unit2.tex
@@ -1054,5 +1054,32 @@
 
 
 
+\section{Office Hours (Whitmeyer)}
+\begin{itemize}
+    \item \marginnote{4/13:}The fic fragment: Right spelling/charge?
+    \item Does the iron in Figure \ref{fig:FpFragments} have tetrahedral or square planar geometry and why?
+    \item Copies Table VI.2 from \textcite{bib:CHEM20100Notes}. Some differences?
+    \item Why these specific spins to higher and lower energy (Figure \ref{fig:zeemanSplitting-1e})? Or is it arbitrary?
+    \begin{itemize}
+        \item Convention that negative is lower.
+    \end{itemize}
+    \item What is a Boltzmann population?
+    \begin{itemize}
+        \item A Boltzmann distribution is a mathematical distribution much like the normal distribution.
+        \item There is an ideal bond distance, and some atoms bond closer or farther.
+    \end{itemize}
+    \item Differences in Curie's Law from last quarter?
+    \item In this course, we include units for equilibrium constants, derived from the mass-action expression.
+    \item HW2 4a:
+    \begin{itemize}
+        \item First row compounds are less likely to delocalize?
+        \item LFSE is larger for second, third row.
+        \item First row complexes are more likely to have higher spin states.
+        \item Bigger orbitals with more overlap are better at electron transfer.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
