--- a/Notes/Unit2/Unit2.tex
+++ b/Notes/Unit2/Unit2.tex
@@ -1081,5 +1081,18 @@
 
 
 
+\section{Discussion Section}
+\begin{itemize}
+    \item HW2 due 4/19 at 12 PM CT.
+    \item Midterm 1: 4/22 from 6pm-8pm CT (proctored by Dr. Anderson).
+    \item No discussion section or office hour on 4/20; there will however be a 2 hour exam review and office hour session on 4/17 from 11:30-1:30 CT.
+    \item Sophie will not be available at all Midterm week.
+    \item I can send discussion topics ahead of time or post in the Discussion on Canvas.
+    \item More information will be forthcoming on where Sophie took off points on our homework.
+    \item Zirconium is quasi-stable at $16\,\e[-]$.
+\end{itemize}
+
+
+
 
 \end{document}
